--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,11 @@ dependencies:
   cloud_firestore: ^5.6.8
   firebase_database: ^11.3.6
 
+  provider: ^6.0.0
+
+  table_calendar: ^3.2.0
+  syncfusion_flutter_charts: ^30.2.5
+
   
 dev_dependencies:
   flutter_test:
