--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   path_provider: ^2.1.1
   permission_handler: ^11.0.1
   flutter_local_notifications: ^17.0.0
+  timezone: ^0.9.2
+  logger: ^2.0.2+1
 
   
 dev_dependencies:
