--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,13 @@ dependencies:
   # Novas dependências
   shared_preferences: ^2.2.2
   pdf: ^3.10.4
-  path_provider: ^2.1.1
+  path_provider: ^2.1.4
   permission_handler: ^11.0.1
   flutter_local_notifications: ^17.0.0
   timezone: ^0.9.2
   logger: ^2.0.2+1
+  firebase_storage: ^12.3.4
+  share_plus: ^10.1.1
 
   
 dev_dependencies:
