--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,11 +19,12 @@ dependencies:
 
   provider: ^6.0.0
 
-  table_calendar: ^3.2.0
+  table_calendar: ^3.1.3
   syncfusion_flutter_charts: ^30.2.5
   
   # Novas dependências
   shared_preferences: ^2.2.2
+  intl: ^0.20.2
   pdf: ^3.10.4
   path_provider: ^2.1.4
   permission_handler: ^11.0.1
@@ -32,7 +33,7 @@ dependencies:
   logger: ^2.0.2+1
   firebase_storage: ^12.3.4
   share_plus: ^10.1.1
-
+  flutter_slidable: ^3.1.0
   
 dev_dependencies:
   flutter_test:
