--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     
     <application
-        android:label="fetin"
+        android:label="Leite+"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
