--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "fetin",
-    "short_name": "fetin",
+    "name": "Leite+",
+    "short_name": "Leite+",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "background_color": "#5DADE2",
+    "theme_color": "#5DADE2",
+    "description": "Gestão completa da sua fazenda leiteira.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
